--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ npm run dev
         <p class="form__submission-feedback"></p>
         <div class="form__group-button">
           <button class="form__submit-button">Add task</button>
-          <button class="form__close-button">Close</button>
+          <button type="button" class="form__close-button">Close</button>
         </div>
       </form>
     </div>
